[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
authors = ["Casweeney Ojukwu <@codingcas>"]
description = "A CLI tool that enable developers to scaffold projects of different development tools and programming languages."
repository = "https://github.com/casweeney/resolver"
readme = "README.md"

[dependencies]
git2 = "0.18.3"
clap = { version = "4.2.7", features = ["derive"] }