[package]
name = "resolver-cli"
version = "0.1.2"
edition = "2021"
authors = ["Casweeney Ojukwu <@codingcas>", "Developer Uche <@developeruche>"]
description = "Resolver is a CLI tool that enable developers to scaffold projects for different development purpose, tools and programming languages."
license = "MIT"
repository = "https://github.com/casweeney/resolver"
readme = "README.md"

[dependencies]
git2 = "0.18.3"
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0"